--- a/partials/about.html
+++ b/partials/about.html
@@ -1,31 +1,32 @@
+<div class="wrapdiv">
 <!-- Introduction Row -->
-<div class="row">
+<div class="row color">
     <div class="col-lg-12">
         <h1 class="page-header">Que es Agrandel?
-            <small>Asociacion de Grandes Clientes Electricos de Panama</small>
+            <small class="concolor">Asociacion de Grandes Clientes Electricos de Panama</small>
         </h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
     </div>
 </div>
-<div class="row">
+<div class="row nocolor">
     <div class="col-lg-12">
         <h1 class="page-header">Nuestra Mision
-            <small>Que hacemos</small>
+            <small>Que hacemos?</small>
         </h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
     </div>
 </div>
-<div class="row">
+<div class="row color">
     <div class="col-lg-12">
         <h1 class="page-header">Nuestra Vision
-            <small>Como lo hacemos</small>
+            <small class="concolor">Como lo hacemos?</small>
         </h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
     </div>
 </div>
 
         <!-- Team Members Row -->
-<div class="row">
+<div class="row nocolor">
     <div class="col-lg-12">
         <h2 class="page-header">Nuestro Equipo</h2>
     </div>
@@ -76,15 +77,9 @@
 <hr>
 
         <!-- Footer -->
-<footer>
-    <div class="row">
-        <div class="col-lg-12">
-            <p>2017 Copyright &copy; Agrandel </p>
-            <p>Website por: <a href="http://www.lscubed.net">LSCUBED</a></p>
-        </div>
-        <!-- /.col-lg-12 -->
-    </div>
-    <!-- /.row -->
-</footer>
-
-    </div>
+  <footer class="landingfooter">
+    <p class="pull-right"><a href="#top">Arriba</a></p>
+    <p class="pull-left">&copy; 2017 Agrandel |</p>
+    <p class="pull-left"> | Website por <a href="https://www.lscubed.net" class="designer">LSCUBED</a>
+  </footer>
+</div>
