--- a/partials/blog_post.html
+++ b/partials/blog_post.html
@@ -1,151 +1,75 @@
-
-<div class="row">
-
+    <div class="wrapdiv">
     <!-- Blog Post Content Column -->
-    <div class="col-lg-8">
-        <!-- Title -->
-        <h1>Titulo del Articulo</h1>
-        <!-- Author -->
-        <p class="lead">por <a href="#">Agrandel</a></p>
-        <hr>
-        <!-- Date/Time -->
-        <p><span class="glyphicon glyphicon-time"></span> Escrito el 31 Mayo, 2017 at 9:00 PM</p>
-        <hr>
-        <!-- Preview Image -->
-        <img class="img-responsive" src="http://placehold.it/900x300" alt="">
-        <hr>
-        <!-- Post Content -->
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
-        <hr>
-
-    <!-- Blog Comments -->
-
-    <!-- Comments Form -->
-    <div class="well">
-        <h4>Deje un comentario:</h4>
-        <form role="form">
-            <div class="form-group">
-                <textarea class="form-control" rows="3"></textarea>
+        <div class="col-lg-12 wrapdiv color">
+            <h1>Titulo del Articulo</h1>
+            <p class="lead">por <a href="#">Agrandel</a></p>
+            <hr>
+            <p><span class="glyphicon glyphicon-time"></span> Escrito el 31 Mayo, 2017 at 9:00 PM</p>
+            <hr>
+            <img class="img-responsive" src="http://placehold.it/900x300" alt="">
+            <hr>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
+            <hr>
+        <!-- Blog Comments -->
+        <!-- Comments Form -->
+            <div class="well">
+                <h4>Deje un comentario:</h4>
+                <form role="form">
+                    <div class="form-group">
+                        <textarea class="form-control" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Comentar</button>
+                </form>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-    <hr>
-
-    <!-- Posted Comments -->
-
-    <!-- Comment -->
-    <div class="media">
-        <a class="pull-left" href="#">
-            <img class="media-object" src="http://placehold.it/64x64" alt="">
-        </a>
-        <div class="media-body">
-            <h4 class="media-heading">Usuario
-                <small>31 Mayo 2017 a 9:30 PM</small>
-            </h4>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-        </div>
-    </div>
-
-    <!-- Comment -->
-    <div class="media">
-        <a class="pull-left" href="#">
-            <img class="media-object" src="http://placehold.it/64x64" alt="">
-        </a>
-        <div class="media-body">
-            <h4 class="media-heading">Usuario
-                <small>31 Mayo 2017 at 9:30 PM</small>
-            </h4>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-            <!-- Nested Comment -->
+            <hr>
+            <!-- Posted Comments -->
+            <!-- Comment -->
             <div class="media">
                 <a class="pull-left" href="#">
-                    <img class="media-object" src="http://placehold.it/64x64" alt="">
+                    <img class="media-object" src="http://lorempixel.com/64/64/people/4" alt="">
                 </a>
                 <div class="media-body">
-                    <h4 class="media-heading">Otro Usuario
-                        <small>31 Mayo 2017 at 9:30 PM</small>
+                    <h4 class="media-heading">Usuario
+                        <small>31 Mayo 2017 a 9:30 PM</small>
                     </h4>
                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
                 </div>
             </div>
-            <!-- End Nested Comment -->
-        </div>
-    </div>
-
-    </div>
-
-    <!-- Blog Sidebar Widgets Column -->
-    <div class="col-md-4">
-
-    <!-- Blog Search Well -->
-    <div class="well">
-        <h4>Busque</h4>
-        <div class="input-group">
-            <input type="text" class="form-control">
-            <span class="input-group-btn">
-                <button class="btn btn-default" type="button">
-                    <span class="glyphicon glyphicon-search"></span>
-            </button>
-            </span>
-        </div>
-        <!-- /.input-group -->
-    </div>
-
-    <!-- Blog Categories Well -->
-    <div class="well">
-        <h4>Categorias</h4>
-        <div class="row">
-            <div class="col-lg-6">
-                <ul class="list-unstyled">
-                    <li><a href="#">Categoria</a>
-                    <li><a href="#">Categoria</a>
-                    <li><a href="#">Categoria</a>
-                    <li><a href="#">Categoria</a>
-                    </li>
-                    
-                </ul>
-            </div>
-            <div class="col-lg-6">
-                <ul class="list-unstyled">
-                    <li><a href="#">Categoria</a>
-                    </li>
-                    <li><a href="#">Categoria</a>
-                    </li>
-                    <li><a href="#">Categoria</a>
-                    </li>
-                    <li><a href="#">Categoria</a>
-                    </li>  
-                </ul>
+            <!-- Comment -->
+            <div class="media">
+                <a class="pull-left" href="#">
+                    <img class="media-object" src="http://lorempixel.com/64/64/people/2" alt="">
+                </a>
+                <div class="media-body">
+                    <h4 class="media-heading">Usuario
+                        <small>31 Mayo 2017 at 9:30 PM</small>
+                    </h4>
+                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                    <!-- Nested Comment -->
+                    <div class="media">
+                        <a class="pull-left" href="#">
+                            <img class="media-object" src="http://lorempixel.com/64/64/people/1" alt="">
+                        </a>
+                        <div class="media-body">
+                            <h4 class="media-heading">Otro Usuario
+                                <small>31 Mayo 2017 at 9:30 PM</small>
+                            </h4>
+                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <!-- /.row -->
-    </div>
-
-        <!-- Side Widget Well -->
-    <div class="well">
-        <h4>Sinaposis</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
-    </div>
-
-    </div>
-
+    <!-- Footer -->
+    <hr>
+  <!--   <footer class="landingfooter">
+        <p class="pull-right"><a href="#top">Arriba</a></p>
+        <p class="pull-left">&copy; 2017 Agrandel |</p>
+        <p class="pull-left"> | Website por <a href="https://www.lscubed.net" class="designer">LSCUBED</a></p>
+    </footer> -->
 </div>
-        <!-- /.row -->
-
-<hr>
-
-<!-- Footer -->
-<footer>
-    <div class="row">
-        <div class="col-lg-12">
-            <p>Copyright &copy; 2017 Agrandel</p>
-            <p>Website por: <a href="http://www.lscubed.net">LSCUBED</a></p>
-        </div>
-    </div>
-</footer>
 
