--- a/partials/landing.html
+++ b/partials/landing.html
@@ -1,51 +1,53 @@
     <!-- Carousel
     ================================================== -->
-<div id="top"></div>
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img class="first-slide" src="images/cinta.jpg" alt="First slide">
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>Example headline.</h1>
-          <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+<div class="wrapdiv">
+  <div id="top"></div>
+
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="images/logo.jpg" style="width:1500px; height: 500px;" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <!-- <h1>Ejemplo</h1> -->
+              <!-- <p>Aqui se puede escribir cualquier informacion. Se podria tambien agregarle mas fotos. </p> -->
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="http://lorempixel.com/1500/500/city/7" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Ejemplo</h1>
+              <p>Aqui se puede escribir cualquier informacion. Se podria tambien agregarle mas fotos.</p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="http://lorempixel.com/1500/500/city/8" alt="Third slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Mas un ejemplo</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="item">
-      <img class="second-slide" src="images/cinta.jpg" alt="Second slide">
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>Another example headline.</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-        </div>
-      </div>
-    </div>
-    <div class="item">
-      <img class="third-slide" src="images/cinta.jpg" alt="Third slide">
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>One more for good measure.</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div><!-- /.carousel -->
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- /.carousel -->
 
 
 
@@ -53,66 +55,66 @@
 
   <hr class="featurette-divider">
 
-  <div class="row featurette">
+  <div class="row featurette color">
     <div class="col-md-7">
-      <h2 class="featurette-heading">Quienes Somos: <span class="text-muted">Acerca de Agrandel</span></h2>
+      <h2 class="featurette-heading">Quienes Somos: <span class="text-muted concolor">Acerca de Agrandel</span></h2>
       <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      <p><a class="btn btn-lg btn-primary" href="/organigrama" role="button">Aprenda Mas</a></p>
+      <p><a class="btn btn-lg btn-primary btncolor" href="/organigrama" role="button">Aprenda Mas</a></p>
     </div>
     <div class="col-md-5">
-      <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+      <img class="featurette-image img-responsive center-block" src="http://lorempixel.com/500/500/city/2" alt="Generic placeholder image">
     </div>
   </div>
 
   <hr class="featurette-divider">
 
-  <div class="row featurette">
+  <div class="row featurette nocolor">
     <div class="col-md-7 col-md-push-5">
       <h2 class="featurette-heading">Miembros: <span class="text-muted"> Informacion e Inscripcion</span></h2>
       <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       <p><a class="btn btn-lg btn-primary" href="/miembros" role="button">Inscribase</a></p>
     </div>
     <div class="col-md-5 col-md-pull-7">
-      <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+      <img class="featurette-image img-responsive center-block" src="http://lorempixel.com/500/500/city/3" alt="Generic placeholder image">
     </div>
   </div>
 
   <hr class="featurette-divider">
 
-  <div class="row featurette">
+  <div class="row featurette color">
     <div class="col-md-7">
-      <h2 class="featurette-heading">Noticias: <span class="text-muted">Lo ultimo de Agrandel</span></h2>
+      <h2 class="featurette-heading">Noticias: <span class="text-muted concolor">Lo ultimo de Agrandel</span></h2>
       <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      <p><a class="btn btn-lg btn-primary" href="/noticias" role="button">Lea mas</a></p>
+      <p><a class="btn btn-lg btn-primary btncolor" href="/noticias" role="button">Lea mas</a></p>
     </div>
     <div class="col-md-5">
-      <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+      <img class="featurette-image img-responsive center-block" src="http://lorempixel.com/500/500/city/4" alt="Generic placeholder image">
     </div>
   </div>
 
   <hr class="featurette-divider">
 
-  <div class="row featurette">
+  <div class="row featurette nocolor">
     <div class="col-md-7 col-md-push-5">
       <h2 class="featurette-heading">Galeria de Fotos: <span class="text-muted"> Agrandel en Accion</span></h2>
       <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       <p><a class="btn btn-lg btn-primary" href="/fotos" role="button">Vea mas</a></p>
     </div>
     <div class="col-md-5 col-md-pull-7">
-      <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+      <img class="featurette-image img-responsive center-block" src="http://lorempixel.com/500/500/city/5" alt="Generic placeholder image">
     </div>
   </div>
 
   <hr class="featurette-divider">
 
-  <div class="row featurette">
+  <div class="row featurette color">
     <div class="col-md-7">
-      <h2 class="featurette-heading">Contacto: <span class="text-muted">Pongase en Contacto con Agrandel</span></h2>
+      <h2 class="featurette-heading">Contacto: <span class="text-muted concolor">Pongase en Contacto con Agrandel</span></h2>
       <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      <p><a class="btn btn-lg btn-primary" href="/contactos" role="button">Escribanos</a></p>
+      <p><a class="btn btn-lg btn-primary btncolor" href="/contactos" role="button">Escribanos</a></p>
     </div>
     <div class="col-md-5">
-      <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+      <img class="featurette-image img-responsive center-block" src="http://lorempixel.com/500/500/city" alt="Generic placeholder image">
     </div>
   </div>
 
@@ -121,12 +123,12 @@
 
 
   <!-- FOOTER -->
-  <footer>
+  <footer class="landingfooter">
     <p class="pull-right"><a href="#top">Arriba</a></p>
-    <p>&copy; 2017 Agrandel. &middot; </p>
-    <p>Website por <a href="https://www.lscubed.net">LSCUBED</a>
+    <p class="pull-left">&copy; 2017 Agrandel |</p>
+    <p class="pull-left"> | Website por <a href="https://www.lscubed.net" class="designer">LSCUBED</a>
   </footer>
 
-</div><!-- /.container -->
+</div><!-- /.wrapdiv -->
 
 
