--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -5,7 +5,7 @@
 <div class="navbar-wrapper">
   <div class="container">
     <nav class="navbar navbar-inverse navbar-static-top">
-      <div class="container">
+      <!-- <div class="container"> -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
@@ -13,7 +13,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">AGRANDEL</a>
+          <!-- <a class="navbar-brand" href="#">AGRANDEL</a> -->
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -25,7 +25,7 @@
             <li><a href="/contactos">Contacto</a></li>
           </ul>
         </div>
-      </div>
+      <!-- </div> -->
     </nav>
   </div>
 </div>
