--- a/partials/blog_post.html
+++ b/partials/blog_post.html
@@ -1,4 +1,3 @@
-    <div class="wrapdiv">
     <!-- Blog Post Content Column -->
         <div class="col-lg-12 wrapdiv color">
             <h1>Titulo del Articulo</h1>
@@ -6,7 +5,7 @@
             <hr>
             <p><span class="glyphicon glyphicon-time"></span> Escrito el 31 Mayo, 2017 at 9:00 PM</p>
             <hr>
-            <img class="img-responsive" src="http://placehold.it/900x300" alt="">
+            <img class="img-responsive" src="http://lorempixel.com/900/300/nature/7" alt="">
             <hr>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
@@ -34,7 +33,7 @@
                 </a>
                 <div class="media-body">
                     <h4 class="media-heading">Usuario
-                        <small>31 Mayo 2017 a 9:30 PM</small>
+                        <small class="timestamp">31 Mayo 2017 a 9:30 PM</small>
                     </h4>
                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
                 </div>
@@ -46,7 +45,7 @@
                 </a>
                 <div class="media-body">
                     <h4 class="media-heading">Usuario
-                        <small>31 Mayo 2017 at 9:30 PM</small>
+                        <small class="timestamp">31 Mayo 2017 at 9:30 PM</small>
                     </h4>
                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
                     <!-- Nested Comment -->
@@ -56,7 +55,7 @@
                         </a>
                         <div class="media-body">
                             <h4 class="media-heading">Otro Usuario
-                                <small>31 Mayo 2017 at 9:30 PM</small>
+                                <small class="timestamp">31 Mayo 2017 at 9:30 PM</small>
                             </h4>
                             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
                         </div>
@@ -66,10 +65,9 @@
         </div>
     <!-- Footer -->
     <hr>
-  <!--   <footer class="landingfooter">
+ <!--    <footer class="landingfooter">
         <p class="pull-right"><a href="#top">Arriba</a></p>
         <p class="pull-left">&copy; 2017 Agrandel |</p>
         <p class="pull-left"> | Website por <a href="https://www.lscubed.net" class="designer">LSCUBED</a></p>
     </footer> -->
-</div>
 
